---
query: generate semua diagram UML (ERD, class diagram, use case, activity diagram,
  sequence diagram) yang sederhana dan valid serta gampang dipahami
references:
  - "File: /app/Http/Controllers/Api/EspController.php"
  - "File: /app/Http/Controllers/Api/GeofenceController.php"
  - "File: /app/Http/Controllers/Api/GeofenceAlertController.php"
  - "File: /app/Http/Middleware/EspAuth.php"
  - "File: /app/Models/Geofence.php"
  - "File: /app/Models/GpsLog.php"
  - "File: /app/Models/RelayLog.php"
  - "File: /public/js/dashboard.js"
  - "File: /public/js/geofence.js"
  - "File: /public/js/history.js"
  - "File: /resources/views/dashboard.blade.php"
  - "File: /resources/views/geofence.blade.php"
  - "File: /resources/views/history.blade.php"
  - "File: /routes/api.php"
  - "File: /routes/web.php"
  - >-
    Reference: No browser pages are currently shared with you.


    1 page is open but not shared.

    Use the 'open_browser_page' tool to open a new page or to help the user
    share an existing page.
  - |+
    Reference: <skills>
    Here is a list of skills that contain domain specific knowledge on a variety of topics.
    Each skill comes with a description of the topic and a file path that contains the detailed instructions.
    When a user asks you to perform a task that falls within the domain of a skill, use the #tool:read/readFile tool to acquire the full instructions from the file URI.
    <skill>
    <name>get-search-view-results</name>
    <description>Get the current search results from the Search view in VS Code</description>
    <file>c:\Users\boy93\AppData\Local\Programs\Microsoft VS Code\8b640eef5a\resources\app\extensions\copilot\assets\prompts\skills\get-search-view-results\SKILL.md</file>
    </skill>
    <skill>
    <name>agent-customization</name>
    <description>**WORKFLOW SKILL** — Create, update, review, fix, or debug VS Code agent customization files (.instructions.md, .prompt.md, .agent.md, SKILL.md, copilot-instructions.md, AGENTS.md). USE FOR: saving coding preferences; troubleshooting why instructions/skills/agents are ignored or not invoked; configuring applyTo patterns; defining tool restrictions; creating custom agent modes or specialized workflows; packaging domain knowledge; fixing YAML frontmatter syntax. DO NOT USE FOR: general coding questions (use default agent); runtime debugging or error diagnosis; MCP server configuration (use MCP docs directly); VS Code extension development. INVOKES: file system tools (read/write customization files), ask-questions tool (interview user for requirements), subagents for codebase exploration. FOR SINGLE OPERATIONS: For quick YAML frontmatter fixes or creating a single file from a known pattern, edit the file directly — no skill needed.</description>
    <file>c:\Users\boy93\AppData\Local\Programs\Microsoft VS Code\8b640eef5a\resources\app\extensions\copilot\assets\prompts\skills\agent-customization\SKILL.md</file>
    </skill>
    </skills>


    <agents>
    Here is a list of agents that can be used when running a subagent.
    Each agent has optionally a description with the agent's purpose and expertise. When asked to run a subagent, choose the most appropriate agent from this list.
    Use the #tool:agent/runSubagent tool with the agent name to run the subagent.
    <agent>
    <name>modernize-java</name>
    <description>Upgrades Java projects to target versions (e.g., Java 21, Spring Boot 3.2) via incremental planning and execution. Use this agent for all Java upgrade requests.</description>
    <argumentHint>Target versions (e.g., Java 21, Spring Boot 3.2) and project context.</argumentHint>
    </agent>
    </agents>

generationTime: 2026-05-15T11:54:00.242Z
---
classDiagram
    class EspController {
      +receiveGps(Request)
      +getCommand()
      +status()
      +relayOn()
      +relayOff()
      +history()
      +resetGeofenceState()
      +flushSession()
      +saveSession()
      +deleteHistory($id)
      -flushSessionIfOffline(bool)
      -checkGeofenceAlerts(float,float)
      -calculateDistance(float,float,float,float): float
    }

    class GeofenceController {
      +index()
      +store(Request)
      +show($id)
      +update(Request,$id)
      +destroy($id)
    }

    class GeofenceAlertController {
      +send(Request)
    }

    class EspAuth {
      +handle(Request, Closure)
    }

    class Geofence {
      +fillable
      +casts
    }
    class GpsLog {
      +fillable
      +casts
    }
    class RelayLog {
      +fillable
    }

    class TelegramService {
      +sendGeofenceAlert(...)
    }

    EspController ..> Geofence
    EspController ..> GpsLog
    EspController ..> RelayLog
    EspController ..> TelegramService
    GeofenceController ..> Geofence
    GeofenceAlertController ..> TelegramService
    EspController ..> EspAuth